2014-05-01  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Script.h:
	* Script.cpp:
	* ShaderPart.h:
	* ShaderPart.cpp:
	* ShaderProgram.h:
	* ShaderProgram.cpp: 

2014-04-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* jsContext.h: 

2014-04-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp: 

2014-04-29  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h: 

2014-04-29  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.h: 

2014-04-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.cpp: 

2014-04-29  Holger Seelig  <holger.seelig@yahoo.de>

	* RenderingProperties.cpp:
	* jsContext.h:
	* jsContext.cpp: 

2014-04-28  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-04-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* X3D.h:
	* X3D.cpp:
	* libtitania-x3d.cproj:
	* Scene.cpp:
	* Context.h:
	* Browser.cpp:
	* Context.cpp:
	* Selection.cpp:
	* X3DBrowser.cpp:
	* X3DScene.cpp:
	* Notification.cpp:
	* X3DBrowserContext.cpp:
	* RenderingProperties.h:
	* RenderingProperties.cpp:
	* X3DViewer.cpp:
	* X3DTexturingContext.cpp:
	* X3DPointingDeviceSensorContext.cpp: 

2014-04-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGarbageCollector.h: 

2014-04-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DObject.h:
	* Parser.cpp:
	* X3DObject.cpp:
	* Scene.cpp:
	* X3DArrayField.h:
	* X3DChildObject.cpp:
	* X3DGarbageCollector.h:
	* GarbargeCollector.cpp:
	* X3DBrowserContext.cpp:
	* X3DGarbargeCollector.cpp: 

2014-04-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Router.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* X3DRouterObject.h:
	* X3DRouterObject.cpp:
	* X3DBrowserContext.h:
	* X3DBrowserContext.cpp:
	* TransformTool.cpp:
	* X3DBoundedObjectTool.h:
	* X3DEnvironmentalSensorNodeTool.h: 

2014-04-27  Holger Seelig  <holger.seelig@yahoo.de>
